<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc02b">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.mycollege.MainActivity">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:background="#ffffff"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffb300" />

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="match_parent"
            android:layout_height="281dp"
            android:layout_below="@id/tv1"
            android:background="#fafafa"
            android:paddingTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/jssaten" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:background="#fafafa"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/vision_title"
            android:textAppearance="?android:textAppearanceSearchResultTitle"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="16dp"
            android:background="#ffffff"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:text="@string/vision"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#ffb300"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:background="#ffffff"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:text="@string/contactUs"
            android:textAppearance="?android:textAppearanceSearchResultTitle"/>
        <LinearLayout
            android:id="@+id/contactNo_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:background="#ffffff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/contactno"/>
            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactNo"
                android:paddingLeft="16dp"
                android:autoLink="phone"
                android:textColorLink="#ffb300" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/link_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/contactNo_ll"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:background="#ffffff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/link"/>
            <TextView
                android:id="@+id/web_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:paddingLeft="16dp"
                android:autoLink="web"
                android:textColorLink="#0090b4" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/location_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/link_ll"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:background="#ffffff"
            android:layout_marginBottom="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location"/>
            <TextView
                android:id="@+id/loc_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:paddingLeft="16dp"
                android:onClick="openLocation"
                android:textColor="#008700" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>